tolist fix